# routes/reviews.js
@@ -4,19 +4,19 @@ const router = require("express").Router();
 // requiere the validation rules
 const { reviewValidationRules, validate } = require("../validator.js");
 
+// require the auth middleware
+const { isAuthenticated } = require("../middleware/authenticate.js");
+
 const reviewsControllers = require("../controllers/reviews");
 
 router.get("/", reviewsControllers.getAll);
 
 router.get("/:id", reviewsControllers.getSingle);
 
-// router.post("/", reviewsControllers.createReview);
-
-// router.put("/:id", reviewsControllers.updateReview);
-
 // pass the validation first, then proceed if no errors are found, else throw an error msg.
 router.post(
   "/",
+  isAuthenticated,
   reviewValidationRules(),
   validate,
   reviewsControllers.createReview,
@@ -24,11 +24,12 @@ router.post(
 
 router.put(
   "/:id",
+  isAuthenticated,
   reviewValidationRules(),
   validate,
   reviewsControllers.updateReview,
 );
 
-router.delete("/:id", reviewsControllers.deleteReview);
+router.delete("/:id", isAuthenticated, reviewsControllers.deleteReview);
 
 module.exports = router;
